samples/_failures_safe/1761501203_b02914_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_81bfdf09.c: In function ‘print_compression_info’:
./samples/SAFE/__tmp_81bfdf09.c:157:12: error: missing terminating " character
  157 |     printf("  Compressed size
      |            ^~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_81bfdf09.c:157:5: error: expected expression at end of input
  157 |     printf("  Compressed size
      |     ^~~~~~
./samples/SAFE/__tmp_81bfdf09.c:157:5: error: expected declaration or statement at end of input
